--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,11 @@ tqdm==4.66.1
 urllib3==2.0.5
 Werkzeug==2.3.7
 yarl==1.9.2
+langchain
+openai
+faiss-cpu
+transformers
+langchain-openai
+langchain-community
+langchain-experimental
+tabulate
