--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,46 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.2.0
 async-timeout==4.0.3
 attrs==23.1.0
 blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
+dataclasses-json==0.6.3
 docutils==0.20.1
 Flask==2.3.3
 Flask-Cors==4.0.0
 frozenlist==1.4.0
+greenlet==3.0.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.1.1
+langchain-community==0.0.13
+langchain-core==0.1.13
+langsmith==0.0.83
 MarkupSafe==2.1.3
+marshmallow==3.20.2
 multidict==6.0.4
+mypy-extensions==1.0.0
+numpy==1.26.3
+openai==0.28.1
+packaging==23.2
+pydantic==2.5.3
+pydantic_core==2.14.6
 python-decouple==3.8
+PyYAML==6.0.1
 requests==2.31.0
+sniffio==1.3.0
+SQLAlchemy==2.0.25
+tenacity==8.2.3
 tqdm==4.66.1
+typing-inspect==0.9.0
+typing_extensions==4.9.0
 urllib3==2.0.5
 Werkzeug==2.3.7
 yarl==1.9.2
-langchain
-openai
-faiss-cpu
-transformers
-langchain-openai
-langchain-community
-langchain-experimental
-tabulate
