--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,18 @@ mypy-extensions==1.0.0
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
 omegaconf==2.3.0
 onnx==1.15.0
 onnxruntime==1.15.1
@@ -89,6 +101,7 @@ pypdfium2==4.26.0
 pytesseract==0.3.10
 python-dateutil==2.8.2
 python-decouple==3.8
+python-dotenv==1.0.0
 python-iso639==2024.1.2
 python-magic==0.4.27
 python-multipart==0.0.6
@@ -113,6 +126,7 @@ torch==2.1.2
 torchvision==0.16.2
 tqdm==4.66.1
 transformers==4.36.2
+triton==2.1.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.4
