--- a/requirements.txt
+++ b/requirements.txt
@@ -135,6 +135,8 @@ torchvision==0.16.2
 tqdm==4.66.1
 transformers==4.36.2
 triton==2.1.0
+types-Flask-Cors==4.0.0.20240106
+types-requests==2.31.0.20240125
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.4
