--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# General
+**/temp*
+
+## Mac
+.DS_Store
+volumes
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -159,6 +166,3 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-## Mac
-.DS_Store
-volumes
